# voxpop

./: README.md
antlab/: README.md
dayoff/: README.md
forum/: README.md
human/: README.md
manifest/: README.md
radio/: README.md
riverbeta/: .gitignore  README.md  pyproject.toml  requirements.txt
riverbeta/src/riverbeta/: __init__.py  cli.py  colormap.py  download.py  frames.py  hazards.py  pipeline.py  report.py  scenes.py  transcribe.py
riverbeta/src/riverbeta/templates/: report.html.j2
riverbeta/tests/: test_colormap.py  test_hazards.py  test_report.py  test_scenes.py
snapnote/: ARCHITECTURE.md  README.md
voxpop/: HARDWARE.md  README.md
